Interim commit of major system refactor
Still a lot of work to be done, but major progress made on better-
aligning original implementation with Foundry conventions, as well as
separation of models, views, and controllers.

A great deal of work left to do, and this commit likely contains
breaking changes with pieces that are not included in it (e.g. non-
character actors), so should not be considered functional on its own.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -155,10 +155,12 @@
   "sta.apps.pool": "Number of Dice in Pool",
   "sta.apps.rolldice": "Roll Dice",
 
-  "sta.roll.success": "Success",
-  "sta.roll.successPlural": "Successes",
+  "sta.roll.success": "|#| Success",
+  "sta.roll.successPlural": "|#| Successes",
   "sta.roll.task.name": "Task",
-  "sta.roll.complicationrange": "Complication range is ",
+  "sta.roll.complicationrange": "Complication:",
+  "sta.roll.successthreshold": "Target:",
+  "sta.roll.criticalthreshold": "Crit <=",
   "sta.roll.complication": "There was a complication!",
   "sta.roll.complicationPlural": "There were |#| complications!",
   "sta.roll.effect": "There was an effect!",
