Re-implemented Challenge Rolls and added roll privacy support.
FEATURES:
* Added the ability for actors to perform challenge rolls.
* Re-implemented challenge rolls as the STAChallengeRoll class.
* Updated the base STARoll class to properly process roll privacy,
  which alters the behavior of roll chat templates.
* Added roll privacy support to the task roll chat template.
* Moved challenge roll chat HTML into a proper template.
* Gave both roll dialogs unique IDs, so that multiple dialogs of the
  same type cannot be instantiated (which would violate unique selector
  IDs).
* Added a title to both roll dialog types. For tasks, this draws from
  the two stats being used (e.g. Control + Engineering). For challenges,
  it either draws from the weapon name or simply says "Challenge Roll"
  (or its localized equivalent).
* Moved all remaining "roll" functions (i.e. non-task, non-challenge)
  into comments outside of the STARoll class definitions.
  * TODO: Still need to re-implement the send-to-chat aspect of these.

FIXES:
* Fixed incorrect data-stat-type tags in actor sheet templates.
* Slightly altered the task roll dialog layout.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -160,13 +160,14 @@
   "sta.item.placeholder.smallcraftcontainer": "New Small Craft Container",
 
   "sta.item.armor.add_unequipped": "The current actor already had armor equipped. Adding unequipped.",
-  "sta.item.delete.confirm": 'Are you sure you want to delete "|#|"?',
+  "sta.item.delete.confirm": "Are you sure you want to delete \"|#|\"?",
 
   "sta.apps.dicepoolwindow": "Dice Pool",
   "sta.apps.focus": "Using focus?",
   "sta.apps.determination": "Using determination/value?",
   "sta.apps.complicationrange": "Complication range (1 is default)?",
-  "sta.apps.pool": "Number of Dice in Pool",
+  "sta.apps.defaultchallengetext": "Challenge Roll",
+  "sta.apps.pool": "Dice in Pool",
   "sta.apps.rolldice": "Roll Dice",
 
   "sta.roll.success": "|#| Success",
